force-app/main/default/objects/Tryout_Evaluation__c/Tryout_Evaluation__c.object-meta.xml
<CustomObject>
    <label>Tryout Evaluation</label>
    <pluralLabel>Tryout Evaluations</pluralLabel>
    <nameField>
        <displayFormat>TE-{0000}</displayFormat>
        <label>Tryout Evaluation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
    <description>Player evaluations during tryout sessions</description>
</CustomObject>