force-app/main/default/objects/Tryout_Evaluation__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Evaluator comments and notes</description>
</CustomField>