force-app/main/default/objects/Tryout_Evaluation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Player</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tryout Evaluations (Player)</relationshipLabel>
    <relationshipName>Tryout_Evaluations_Player</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The player being evaluated</description>
</CustomField>