force-app/main/default/objects/Tryout_Evaluation__c/fields/Evaluator__c.field-meta.xml
<CustomField>
    <fullName>Evaluator__c</fullName>
    <label>Evaluator</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tryout Evaluations (Evaluator)</relationshipLabel>
    <relationshipName>Tryout_Evaluations_Evaluator</relationshipName>
    <description>The person conducting the evaluation</description>
</CustomField>