force-app/main/default/objects/Tryout_Evaluation__c/fields/Hockey_Sense_Score__c.field-meta.xml
<CustomField>
    <fullName>Hockey_Sense_Score__c</fullName>
    <label>Hockey Sense Score</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>1</scale>
    <description>Hockey sense and IQ score (1-10)</description>
</CustomField>