force-app/main/default/objects/Tryout_Evaluation__c/fields/Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Score__c</fullName>
    <label>Overall Score</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>2</scale>
    <formula
  >(Skating_Score__c + Shooting_Score__c + Hockey_Sense_Score__c) / 3</formula>
    <description>Overall score (average of all scores)</description>
</CustomField>