force-app/main/default/objects/Tryout_Evaluation__c/fields/Shooting_Score__c.field-meta.xml
<CustomField>
    <fullName>Shooting_Score__c</fullName>
    <label>Shooting Score</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>1</scale>
    <description>Shooting skills score (1-10)</description>
</CustomField>