force-app/main/default/objects/Tryout_Evaluation__c/fields/Skating_Score__c.field-meta.xml
<CustomField>
    <fullName>Skating_Score__c</fullName>
    <label>Skating Score</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>1</scale>
    <description>Skating skills score (1-10)</description>
</CustomField>