force-app/main/default/objects/Tryout_Evaluation__c/fields/Tryout__c.field-meta.xml
<CustomField>
    <fullName>Tryout__c</fullName>
    <label>Tryout</label>
    <type>Lookup</type>
    <referenceTo>Tryout__c</referenceTo>
    <relationshipLabel>Tryout Evaluations</relationshipLabel>
    <relationshipName>Tryout_Evaluations</relationshipName>
    <required>true</required>
    <description>The tryout session this evaluation is for</description>
</CustomField>